Closed Bug 1148268 Opened 11 years ago Closed 11 years ago

[DeviceStorage] misspelling attribute "mActorDestoryed"

Categories

(Core :: DOM: Device Interfaces, defect)

37 Branch
x86
macOS
defect
Not set
minor

Tracking

()

RESOLVED FIXED
mozilla40
Tracking Status
firefox40 --- fixed

People

(Reporter: schien, Assigned: ewu)

Details

(Whiteboard: [good first bug])

Attachments

(1 file, 4 obsolete files)

Assignee: nobody → ewu
Attached patch bug_1148268.patch (obsolete) — Splinter Review
Hi, Could you please help to review this patch? thanks.
Attachment #8584370 - Flags: review?(sku)
Attachment #8584370 - Flags: review?(schien)
Comment on attachment 8584370 [details] [diff] [review] bug_1148268.patch Review of attachment 8584370 [details] [diff] [review]: ----------------------------------------------------------------- You'll also need to update all the code that reference this attribute, otherwise it won't compile, right?
Attachment #8584370 - Flags: review?(sku)
Attachment #8584370 - Flags: review?(schien)
Attached patch bug_1148268_part2.patch (obsolete) — Splinter Review
Hi Shih-Chiang, Thanks you for your reminder. this patch will update all the code that reference this attribute. thanks.
Attachment #8584414 - Flags: review?(schien)
Comment on attachment 8584414 [details] [diff] [review] bug_1148268_part2.patch Review of attachment 8584414 [details] [diff] [review]: ----------------------------------------------------------------- lgtm! you need to merge these two patch files into one, and follow [1] to provide the checkin comment. Then, r? dhyland because he is the module owner. Since this is your first patch, please provide the try result as a practice even though it is a trivial patch. :) [1] https://developer.mozilla.org/en-US/docs/Mozilla/Developer_guide/Committing_Rules_and_Responsibilities
Attachment #8584414 - Flags: review?(schien) → feedback+
Attached patch bug-1148268-fix_20150330.patch (obsolete) — Splinter Review
Hi Shih-Chiang. Update correct patch and the try result as below [1] link. [1] https://treeherder.mozilla.org/#/jobs?repo=try&revision=324a02b52a6e
Attachment #8585296 - Flags: review?(schien)
Comment on attachment 8585296 [details] [diff] [review] bug-1148268-fix_20150330.patch Review of attachment 8585296 [details] [diff] [review]: ----------------------------------------------------------------- Looks good, as I mentioned in comment #4 you should change the reviewer to dhyland. Be sure to modify "r=schien" to "r=dhyland" in your checkin comment. BTW, you can mark those out-dated patches as "obsolete" (follow the "Details" link in attachments section, then click "edit details").
Attachment #8585296 - Flags: review?(schien) → review?(dhylands)
Attachment #8584370 - Attachment is obsolete: true
Attachment #8584414 - Attachment is obsolete: true
Attachment #8585296 - Flags: review?(dhylands)
Attachment #8585296 - Attachment is obsolete: true
Attachment #8585334 - Flags: review?(dhylands)
Comment on attachment 8585334 [details] [diff] [review] Bug 1148268 - [DeviceStorage] misspelling attribute "mActorDestoryed" Review of attachment 8585334 [details] [diff] [review]: ----------------------------------------------------------------- Looks good - thanks for taking the time to fix this.
Attachment #8585334 - Flags: review?(dhylands) → review+
Hi, The result of try is as below [1] link. [1] https://treeherder.mozilla.org/#/jobs?repo=try&revision=2eb6b669abd0
Attachment #8585334 - Attachment is obsolete: true
Attachment #8585834 - Flags: review+
Keywords: checkin-needed
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla40
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: