Bug 1148268 - fixed misspelling attribute mActorDestoryed. r=dhyland.